objects/FollowUpReport__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Follow-up Reports</relationshipLabel>
        <relationshipName>Follow_up_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This field can contain up to 1024 characters. External Comments from multiple Follow-up reports are summarized and can be exported using a report.</inlineHelpText>
        <label>External Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InternalComments__c</fullName>
        <label>Internal Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>QuoteLine__r.SBQQ__Quote__r.SBQQ__Opportunity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDisplayName__c</fullName>
        <formula>QuoteLine__r.ProductDisplay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Follow-up Reports</relationshipLabel>
        <relationshipName>Follow_up_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <formula>QuoteLine__r.SBQQ__Quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteLine__c</fullName>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Follow-up Reports</relationshipLabel>
        <relationshipName>Follow_up_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuoteName__c</fullName>
        <formula>QuoteLine__r.SBQQ__Quote__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <label>Follow-up Report</label>
    <nameField>
        <displayFormat>FUR-{000000000}</displayFormat>
        <label>Follow-up Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow-up Reports</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OnlyAllowedAgainstPrimary</fullName>
        <active>true</active>
        <description>Validation rule to make sure the quote line item this is created from is related to a Primary quote.</description>
        <errorConditionFormula>AND(
 IsNew(),
 QuoteLine__r.SBQQ__Quote__r.SBQQ__Primary__c = FALSE,
 $Setup.Global_Bypass_Processes_Settings__c.Run_Assignments_Rules__c
)</errorConditionFormula>
        <errorMessage>You are only allowed to create Follow-up Reports from a Quote Line Item associated to a primary Quote.</errorMessage>
    </validationRules>
</CustomObject>